Refactor code and add test class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="fetch_recipes_failed">Failed to fetch recipes, please try again.</string>
     <string name="recipe_step_desc">Recipe Step Description</string>
     <string name="recipe_ingredients">Recipe Ingredients</string>
+    <string name="no_content">Sorry, no content.</string>
 </resources>
