Provide list of recipe from widget and open the recipe detail page when recipe on widget clicked

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="recipe_step_desc">Recipe Step Description</string>
     <string name="recipe_ingredients">Recipe Ingredients</string>
     <string name="no_content">Sorry, no content.</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
